@@ -342,6 +342,16 @@ noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack LZO compressed files
 enabled     = yes
 
+[minix]
+type        = unpack
+module      = bat.fwunpack
+method      = searchUnpackMinix
+priority    = 1
+magic       = minix
+noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
+description = Unpack Minix file systems
+enabled     = no
+
 [pdf_unpack]
 type        = unpack
 module      = bat.fwunpack
